# CppND-Capstone-Game

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  install_deps.sh  run.sh
.github/workflows/: c-cpp.yml
data/: bullet_green_dn_1.xcf
doc/: classes.puml
src/: bullet.cpp  bullet.h  config.h  controller.cpp  controller.h  enemy.cpp  enemy.h  game.cpp  game.h  iobject2d.h  logic.cpp  logic.h  main.cpp  object2d.cpp  object2d.h  player.cpp  player.h  renderer.cpp  renderer.h
